# update-migrate-rust

./: .gitignore  Cargo.toml  README.md  package.json
.github/workflows/: tests.yml
advanced-multi-version-updates/v1/: Cargo.toml  README.md  rust-toolchain.toml
advanced-multi-version-updates/v2/: Cargo.toml  README.md
base/: Cargo.toml
basic-updates/update/: Cargo.toml  README.md
basic-updates/update/src/: lib.rs  migrate.rs
basic-updates/update/tests/: workspaces.rs
contracts/: Cargo.toml  build.sh  deploy.sh
contracts/basic-updates/base/: Cargo.toml  README.md
contracts/basic-updates/base/src/: lib.rs
contracts/basic-updates/first-update/: Cargo.toml
contracts/basic-updates/first-update/src/: migrate.rs
contracts/basic-updates/second-update/: Cargo.toml
contracts/basic-updates/second-update/src/: lib.rs  migrate.rs
contracts/basic-updates/update/: Cargo.toml  README.md
contracts/basic-updates/update/src/: lib.rs  migrate.rs
contracts/basic-updates/update/tests/: workspaces.rs
contracts/enum-updates/base/: Cargo.toml  README.md
contracts/enum-updates/base/src/: lib.rs  versioned_msg.rs
contracts/enum-updates/update/: Cargo.toml  README.md
contracts/enum-updates/update/src/: lib.rs  versioned_msg.rs
contracts/self-updates/base/: Cargo.toml  README.md
contracts/self-updates/base/src/: lib.rs  update.rs
contracts/self-updates/update/: Cargo.toml  README.md
contracts/self-updates/update/src/: lib.rs  migrate.rs  update.rs
contracts/self-updates/update/tests/: workspaces.rs
first-update/: Cargo.toml  README.md
integration-tests/: package-lock.json
self-updates/update/: Cargo.toml  README.md
self-updates/update/src/: lib.rs  migrate.rs  update.rs
self-updates/update/tests/: workspaces.rs
(+28 files in other folders)
