[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = [
    "basic-updates/base",
    "basic-updates/update",
    "enum-updates/base",
    "enum-updates/update",
    "self-updates/base",
    "self-updates/update",
    "advanced-multi-version-updates/v1",
    "advanced-multi-version-updates/v2",
    "advanced-multi-version-updates/v3",
]
