[package]
name = "self-update"
version = "1.0.0"
authors = ["Near Inc <hello@near.org>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { version = "5.24.0", features = ["legacy"] }

[dev-dependencies]
near-sdk = { version = "5.24.0" }
near-workspaces = { version = "0.22.0", features = ["unstable"] }
tokio = { version = "1.48.0", features = ["full"] }
serde_json = "1"
rstest = "0.26.1"
